--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-requests==2.27.0
-beautifulsoup4==4.10.0
-discord==1.7.3
-feedparser==6.0.8
+beautifulsoup4>=4.11.1
+py-cord>=2.0.0b7
+feedparser>=6.0.8
+requests>=2.27.0
+dataclasses
